# k9bookshelf

./: .bazelrc  .gitignore  .gqlgenc.yml  .graphqlrc.yml  BUILD.bazel  Makefile  README.md  TODO.md  WORKSPACE  bazel-bin  bazel-k9books  bazel-out  bazel-testlogs  com_github_99designs_gqlgen.patch  config.yml  go.mod  go.sum  package.json  tsconfig.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: deploy_contents.yml  deploy_products.yml  deploy_theme.yml  download_theme.yml  release.yml  test_go.yml
assets/: app.min.js  app.min.js.map
content/: BUILD.bazel  README.md  article.go  client.go  deploy.go  download.go  markdown.go  markdown_test.go  syncdata.go
content/cmd/: BUILD.bazel  main.go
content/cmd/content/: BUILD.bazel  main.go
contents/pages/: about.md  contact.md  このサイトについて.md
contents/products/: 97-things-every-programmer-should-know.md  accelerate.md  accidentally-wes-anderson.md  action-research-in-software-engineering.md  advanced-api-security.md  an-elegant-puzzle.md  an-introduction-to-functional-programming-through-lambda-calculus-dover-books-on-mathematics.md  api-security-in-action.md  apprenticeship-patterns.md  become-an-effective-software-engineering-managerhow-to-be-the-leader-your-development-team-needs.md  blood-sweat-and-pixels-the-triumphant-turbulent-stories-behind-how-video-games-are-made.md  build-a-career-in-data-science.md  building-ethereum-dapps-decentralized-applications-on-the-ethereum-blockchain.md  classic-computer-science-problems-in-java.md  cloud-native-patterns.md  compiler-design-principles-techniques-and-tools.md  computer-vision-eccv-2021.md  database-design-for-mere-mortals.md  database-internals.md  deep-learning-with-structured-data.md  design-and-build-great-web-apisrobust-reliable-and-resilient.md  distributed-services-with-go.md  distributed-services-with-goyour-guide-to-reliable-scalable-and-maintainable-systems.md  dont-teach-coding-until-you-read-this-book.md  essential-typescript.md  event-streams-in-action.md  exercises-for-programmers57-challenges-to-develop-your-coding-skills.md  explore-software-defined-radio-use-sdr-to-receive-satellite-images-and-space-signals.md  exploring-science-through-science-fiction.md  flora.md  flutter.md  frameworkless-front-end-development.md  from-cave-art-to-hubble.md  fundamentals-of-software-architecture.md  genetic-algorithms-in-elixir.md  get-together.md  go-in-action.md  go-programming-for-network-operations.md  hello-startup.md  high-growth-handbook.md  (+64 more)
gqlgenc/: BUILD.bazel  deploy.gql  main.go  productByHandle.gql  productCreate.gql  productISBNs.gql  productUpdate.gql  products.gql
gqlgenc/client/: BUILD.bazel  client.go  gql.go  model.go
layout/: password.liquid
locales/: cs.json  fi.json  fr.json  hr-HR.json  hu.json  id.json  it.json  ms.json  nl.json  pl.json  pt-PT.json  sk-SK.json  sv.json  tr.json  vi.json
onix/: BUILD.bazel  deepl.go  main.go  message.go  onix.go  onix_test.go  util.go  value.go
onix/cmd/: BUILD.bazel  main.go
onix/fixtures/: TestHasSameISBN13.json  create-97 Things Every Programmer Should Know.json  create-Building Ethereum Dapps.json  create-Go in Action.json  create-Introducing Deno.json  create-The Go Programming Language.json  create-The Healthy Programmer.json  update-Go in Action.json  update-Introducing Python.json  update-Natural Language Processing in Action.json  update-The Healthy Programmer.json  update-Voice Applications for Alexa and Google Assistant.json
onix/snapshots/: create-Apprenticeship Patterns.json  create-Building Ethereum Dapps.json  create-Go Programming for Network Operations.json  create-Go in Action.json  create-Hello, Startup.json  create-Introducing Python.json  create-Mastering Go - Second Edition.json  create-Math Art.json  create-Natural Language Processing in Action.json  create-Practical Jamstack.json  create-The Go Programming Language.json  create-The Healthy Programmer.json  create-Voice Applications for Alexa and Google Assistant.json  update-97 Things Every Programmer Should Know.json  update-Apprenticeship Patterns.json  update-Building Ethereum Dapps.json  update-Go Programming for Network Operations.json  update-Go in Action.json  update-Hello, Startup.json  update-Introducing Deno.json  update-Mastering Go - Second Edition.json  update-Math Art.json  update-Practical Jamstack.json  update-The Go Programming Language.json  update-Voice Applications for Alexa and Google Assistant.json
posts/: now-got-started-shop.md
products/: an-introduction-to-functional-programming-through-lambda-calculus-dover-books-on-mathematics.md  blood-sweat-and-pixels-the-triumphant-turbulent-stories-behind-how-video-games-are-made.md  language-implementation-patterns-create-your-own-domain-specific-and-general-programming-languages.md  node-js-design-patterns-third-edition-design-and-implement-production-grade-node-js-applications-using-proven-patterns-and-techniques.md  programming-webassembly-with-rust.md  the-jamstack-book.md  the-makers-guide-to-the-zombie-apocalypse-defend-your-base-with-simple-circuits-arduino-and-raspberry-pi.md
sections/: article-template.liquid  collection-list.liquid  featured-blog.liquid  featured-product.liquid  featured-products.liquid  featured-video.liquid  footer.liquid  newsletter.liquid  password-header.liquid  product-recommendations.liquid  sidebar.liquid  slideshow.liquid
snippets/: comment.liquid  icon-pause.liquid  icon-play.liquid  product-grid-item.liquid
storefront/: index.ts
syncdata/: BUILD.bazel  article.go  client.go  com_github_yamashou_gqlgenc.patch  deploy.go  download.go  main.go  products.gql  syncdata.go
syncdata/cmd/: BUILD.bazel  main.go
syncdata/gqlgenc/: BUILD.bazel
templates/: 404.liquid  cart.liquid  page.contact.liquid  search.liquid
templates/customers/: addresses.liquid
theme/assets/: theme.js.liquid  theme.scss.liquid
theme/config/: settings_data.json  settings_schema.json
theme/layout/: theme.liquid
theme/locales/: bg-BG.json  da.json  de.json  el.json  en.default.json  es.json  hi.json  ja.json  ko.json  (+9 more)
(+43 files in other folders)
