load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix k9bookshelf
gazelle(name = "gazelle")

config_setting(
    name = "darwin",
    values = {"cpu": "darwin"},
)

# NOTE: github actions are running on amd-k8 machine.
# https://en.wikipedia.org/wiki/AMD_K8
# bazel config "$(bazel cquery //:theme | awk -F '[()]' '{print $(NF-1)}')" | grep cpu
config_setting(
    name = "ci",
    values = {"cpu": "k8"},
)

alias(
    name = "theme",
    actual = select({
        ":darwin": "@theme_darwin//file:downloaded",
        ":ci": "@theme_linux//file:downloaded",
        "//conditions:default": "@theme_darwin//file:downloaded",
    }),
)
