load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "article.go",
        "client.go",
        "deploy.go",
        "download.go",
        "markdown.go",
        "syncdata.go",
    ],
    importpath = "github.com/kogai/k9bookshelf/content",
    visibility = ["//visibility:public"],
    deps = [
        "//gqlgenc/client:go_default_library",
        "@com_github_bold_commerce_go_shopify//:go_default_library",
        "@com_github_gomarkdown_markdown//:go_default_library",
        "@com_github_johanneskaufmann_html_to_markdown//:go_default_library",
        "@com_github_tdewolff_minify_v2//:go_default_library",
        "@com_github_tdewolff_minify_v2//html:go_default_library",
        "@com_github_vbauerster_mpb//:go_default_library",
        "@com_github_vbauerster_mpb//decor:go_default_library",
        "@com_github_yamashou_gqlgenc//client:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["markdown_test.go"],
    embed = [":go_default_library"],
    deps = ["@in_gopkg_go_playground_assert_v1//:go_default_library"],
)
