load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "deepl.go",
        "message.go",
        "onix.go",
    ],
    importpath = "github.com/kogai/k9bookshelf/onix",
    visibility = ["//visibility:public"],
    deps = [
        "//gqlgenc/client:go_default_library",
        "@com_github_bold_commerce_go_shopify//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "deepl_test.go",
        "onix_test.go",
    ],
    data = glob(["fixtures/*"]),
    embed = [":go_default_library"],
    deps = [
        "//gqlgenc/client:go_default_library",
        "@in_gopkg_go_playground_assert_v1//:go_default_library",
    ],
)
