load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "deepl.go",
        "message.go",
        "onix.go",
        "util.go",
        "value.go",
    ],
    importpath = "github.com/kogai/k9bookshelf/onix",
    visibility = ["//visibility:public"],
    deps = [
        "//gqlgenc/client:go_default_library",
        "@com_github_bold_commerce_go_shopify//:go_default_library",
        "@com_github_kogai_onix_codegen//generated/go/v2:go",
    ],
)
