load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "article.go",
        "client.go",
        "deploy.go",
        "download.go",
        "syncdata.go",
    ],
    importpath = "k9bookshelf/syncdata",
    visibility = ["//visibility:public"],
    deps = [
        "//syncdata/generated:go_default_library",
        "@com_github_bold_commerce_go_shopify//:go_default_library",
        "@com_github_gomarkdown_markdown//:go_default_library",
        "@com_github_mattn_godown//:go_default_library",
        "@com_github_vbauerster_mpb//:go_default_library",
        "@com_github_vbauerster_mpb//decor:go_default_library",
        "@com_github_yamashou_gqlgenc//client:go_default_library",
    ],
)
