load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kogai/k9bookshelf/content/cmd/content",
    visibility = ["//visibility:private"],
    deps = [
        "//content:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "content",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
